--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "lottie-react-native": "^6.7.0",
+    "lucide-react-native": "^0.454.0",
     "nativewind": "^4.1.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
