--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/native": "^7.0.0",
+    "@shopify/react-native-skia": "^1.5.0",
     "expo": "^52.0.11",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.9",
+    "expo-screen-orientation": "~8.0.0",
     "expo-sharing": "^13.0.0",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
@@ -40,8 +42,7 @@
     "react-native-screens": "~4.1.0",
     "react-native-view-shot": "^4.0.2",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.4.14",
-    "expo-screen-orientation": "~8.0.0"
+    "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
