--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.3",
+    "expo-media-library": "^17.0.3",
     "expo-router": "~4.0.9",
     "expo-screen-orientation": "~8.0.0",
     "expo-sharing": "^13.0.0",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/base-64": "^1.0.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.0.7",
